[FIXED] parsing error.

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ sass:
 
 # Author settings
 author:
-  name     : "Ty Wood"
+  name     : "Ty"
   job      : "Game Programming Senior at Champlain College"
   bio      : "I'm currently working on Office Mayhem, and a hockey party game for the AppleTV."
   thumb    : /images/author.jpg
