[EDITED] header, code font, video padding, code highlighting

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # SEO settings
-title: "Tyler"
-title2: "Wood" # default: ""
+title: "TYLER"
+title2: "WOOD"
 description: "Gameplay Programmer"
 keywords: "game, programmer, champlain, ai, gameplay"
 url: http://tyskwo.github.io/ # site url
