--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
   steam            :
   tumblr           :
-  twitter          :
+  twitter          : "tyskwo"
   vine             :
   weibo            :
   xing             :
