--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -13,7 +13,7 @@ en: &DEFAULT_EN
   ext_link_label             : "Direct Link"
   less_than                  : "less than"
   minute_read                : "minute read"
-  share_on_label             : "Share on"
+  share_on_label             : "If you liked it, give it a share?"
   meta_label                 :
   tags_label                 : "Tags:"
   categories_label           : "Categories:"
@@ -21,8 +21,8 @@ en: &DEFAULT_EN
   comments_label             : "Leave a Comment"
   comments_title             : "Comments"
   more_label                 : "Learn More"
-  related_label              : "You May Also Enjoy"
-  follow_label               : "Follow:"
+  related_label              : "Try these too:"
+  follow_label               : "Connect:"
   feed_label                 : "Feed"
   powered_by                 : "Powered by"
   website_label              : "Website"
