--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,12 @@ social:
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
 
+# Analytics
+analytics:
+  provider               : "google-universal"
+  google:
+    tracking_id          : UA-92078969-1
+
 
 # Site Author
 author:
